--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,11 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            <% if current_student %>
             <li><%= link_to 'My Clubs', clubs_path %></li>
             <li><%= link_to 'My Peeps', students_path %></li>
+            <% end %>
+            <li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_student %>
